gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: "ingress-gateway-k3s"
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: http2
      hosts:
      - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "msr-algaworks-vs"
spec:
  hosts:
  - "*"
  gateways:
  - "ingress-gateway-k3s"
  http:
    - match:
      - uri:
          prefix: /
      route:
        - destination:
            host: msr-algaworks-api-service
            subset: v1
          weight: 100
        - destination:
            host: msr-algaworks-api-service
            subset: v2
          weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: "msr-algaworks-ds"
spec:
  host: msr-algaworks-api-service
  trafficPolicy:
    outlierDetection:
      #consecutive5xxErrors: 2
      interval: 30s
      baseEjectionTime: 30s
      maxEjectionPercent: 100
      consecutiveGatewayErrors: 3
  subsets:
    - name: v1
      labels:
        version: A
      trafficPolicy:
        loadBalancer:
          simple: LEAST_CONN
    - name: v2
      labels:
        version: B
      trafficPolicy:
        loadBalancer:
          simple: RANDOM
